--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
     "gh-pages": "^3.2.3",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "sass": "^1.69.5"
   },
   "description": "### Thanks [vasu](https://github.com/vasu-1/duhacks) for design snippets",
   "main": "index.js",
